# Livox_fuse

./: CMakeLists.txt  package.xml  readme.md
cfg/: FileDir.yaml
cfg/extrinsics/: bpearl_left_novatel_extrinsics.yaml  bpearl_right_novatel_extrinsics.yaml  left_back_mid40_to_novatel.yaml  right_back_mid40_to_novatel.yaml  right_front_mid40_to_novatel.yaml  up_mid_to_novatel.yaml  up_right_to_novatel.yaml  velodyne16_left_novatel_extrinsics.yaml  velodyne16_right_novatel_extrinsics.yaml
cfg/extrinsics/cat/: back_horizon80_to_novatel.yaml  front_horizon80_to_novatel.yaml  left_back_mid40_to_novatel.yaml  left_front_mid40_to_novatel.yaml  right_back_mid40_to_novatel.yaml  right_front_mid40_to_novatel.yaml  up_left_to_novatel.yaml  up_mid_to_novatel.yaml  up_right_to_novatel.yaml
cfg/extrinsics/zhdl/: back_horizon80_to_novatel.yaml  front_horizon80_to_novatel.yaml  left_back_mid40_to_novatel.yaml  left_front_mid40_to_novatel.yaml  right_back_mid40_to_novatel.yaml  right_front_mid40_to_novatel.yaml  up_left_to_novatel.yaml  up_mid_to_novatel.yaml  up_right_to_novatel.yaml
include/: lidar_fuse.h
launch/: livox_fuse.launch
msg/: ADCTrajectory.msg  BestGnssPos.msg  CameraDetection.msg  ChassisInfo.msg  Control.msg  ControlLoopToken.msg  CurveSign.msg  Curved.msg  Debug.msg  Detection.msg  EncodePointCloud.msg  EpbCmd.msg  GearCmd.msg  HMIInput.msg  Heading.msg  IMURaw.msg  INSRaw.msg  INSStdevRaw.msg  JunctionROIPolygon.msg  LaneBoundaryType.msg  LaneParam.msg  LaneSampleAssociation.msg  Lanemarker.msg  Lanemarkers.msg  LightCmd.msg  Localization.msg  LocalizationStatus.msg  MeasureState.msg  MobileyeLanemarker.msg  MobileyeLanemarkers.msg  MobileyeObstacle.msg  MobileyeObstacles.msg  MobileyeObstaclesGo.msg  ModuleName.msg  ModuleStatus.msg  MsgHeader.msg  NavigationLane.msg  NavigationLaneBoundary.msg  NavigationMap.msg  Odometry.msg  (+34 more)
src/: lidar_fuse.cpp  node.cpp
